# vverdad-prototype

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: annotation-format.md  ci-cd-integration.md  data-oriented-programming.md  directory-structure.md  llm-context.md  manual_testing.md  template-guide.md  time-systems.md  underscore-convention.md  users-guide.md  value-type-spec.md
src/: config.rs  error.rs  events.rs  init.rs  lib.rs  main.rs  node.rs  source.rs  value.rs
src/analysis/: discovery.rs  docker.rs  manifest.rs  mod.rs  renderer.rs  runner.rs  validation.rs
src/time/: epoch.rs  error.rs  leap_seconds.rs  mod.rs  parse.rs
src/units/: definitions.rs  error.rs  macros.rs  mod.rs  parse.rs  quantity.rs  unit.rs
