[package]
name = "vverdad"
version = "0.1.0"
authors = ["Nathan Strange <info@visviva.space>"]
edition = "2024"
rust-version = "1.85"
description = "Data processing engine for aerospace vehicle design workflows"
license = "MIT"
repository = "https://github.com/VisVivaSpace/vverdad-prototype"
homepage = "https://github.com/VisVivaSpace/vverdad-prototype"
readme = "README.md"
keywords = ["aerospace", "model-based-systems-engineering", "bevy-ecs", "data-oriented", "template-engine"]
categories = ["aerospace", "science", "template-engine"]

[lib]
name = "vverdad"
path = "src/lib.rs"

[[bin]]
name = "vv"
path = "src/main.rs"

[dependencies]
bevy_ecs = "0.18"
bevy_entity_ptr = "0.6"
bollard = "0.17"
futures-util = "0.3"
clap = { version = "4.5.51", features = ["derive", "env"] }
miette = { version = "7.6.0", features = ["fancy"] }
minijinja = { version = "2.13.0", features = ["loader"]}
ordered-float = "5.1.0"
ron = "0.11.0"
serde = "1.0.228"
serde-value = "0.7.0"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt", "time"] }  # minimal: runtime + timeout for bollard
toml = { version = "0.9.8", features = ["serde"] }

# Binary formats
rmpv = "1.0"
rmp-serde = "1.1"
serde-pickle = "1.2"
ciborium = "0.2"
bson = "2.9"

# Tabular formats
csv = "1.3"
zip = "2.1"
quick-xml = "0.36"

[dev-dependencies]
tempfile = "3"
